--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
         </div>
     </div>
     
-    <script src="/game_logic.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
