--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="container">
         <h1 id="playerText">Tic Tac Toe</h1>
-        <button id="restartBtn">Restart</button>
+        <button id="restartButton">Restart</button>
 
         <div id="gameboard">
             <div class="box" id="0"></div>
